fieldset overflow fix & view heads to home

--- a/style.css
+++ b/style.css
@@ -691,7 +691,7 @@ legend {
 
 .manage fieldset {
     max-height: 24rem;
-    overflow-y: scroll;
+    overflow-y: auto;
     margin-bottom: 1rem;
     width: fit-content;
     margin-inline: auto;
